fixed alignment issue

--- a/styles.scss
+++ b/styles.scss
@@ -8,17 +8,19 @@ body{
     box-sizing: content-box;
     font-family: 'Red Hat Display', sans-serif;
     font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap; /* By default flex has nowrap which prevent align-content*/
+    min-height: 100vh;
     @media (max-width:375px){
         background:  rgb(221,231,253) url(./images/pattern-background-mobile.svg) no-repeat;
     }
 
 }
 .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap; /* By default flex has nowrap which prevent align-content*/
+
     img{
         width:327px;
         border-radius: inherit;
